[metadata]
name = SuperStream
version = 0.0.1
license = MIT
author = Shimada666
author_email = 649940882@qq.com
description = A lightweight streaming library, similar to Java stream.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
url = https://github.com/Shimada666/super-stream
project_urls =
    Documentation = https://github.com/Shimada666/super-stream
    Source = https://github.com/Shimada666/super-stream
    Changelog = https://github.com/Shimada666/super-stream
    Issue Tracker = https://github.com/Shimada666/super-stream/issues
keywords = stream, lazily evaluated
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src